...
                    text = game.name,
                    style = MaterialTheme.typography.headlineSmall,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.align(Alignment.Center))

                IconButton(onClick = onClose, modifier = Modifier.align(Alignment.CenterEnd)) {
                  Icon(Icons.Default.Close, contentDescription = "Close")
                }
              }

              Spacer(modifier = Modifier.height(Dimensions.Spacing.medium))

              // IMAGE
...
@Composable
fun GameDescription(description: String) {
  var expanded by remember { mutableStateOf(false) }

  Column(modifier = Modifier.fillMaxWidth()) {
    Text(
        text = "Overview:",
        style = MaterialTheme.typography.titleMedium.copy(fontWeight = FontWeight.Bold))

    Spacer(modifier = Modifier.height(Dimensions.Spacing.small))

    if (!expanded) {
      Text(
...
